--- a/core_user_registration_app/templates/core_user_registration_app/admin/templates/versions/available.html
+++ b/core_user_registration_app/templates/core_user_registration_app/admin/templates/versions/available.html
@@ -30,7 +30,7 @@
             <th style="width: 20%">Upload date</th>
             <th>Actions</th>
         </tr>
-	    {% for version in data.version_manager.versions.available reversed %}
+	    {% for version in data.categorized_versions.available reversed %}
            <tr>
                <td>{{ version.index }}</td>
                {% if version.object == data.version_manager.current %}
@@ -40,7 +40,7 @@
                {% endif %}
 
                <td>
-                    {{ version.object|print_datetime_from_object_id }}
+                    {{ version.object.creation_date }}
                </td>
                <td>
                    {% block box_actions %}
