fix: load core-admin urls
Change-Id: I897576d927beb681bfad43f7fba794711887568b

--- a/core_user_registration_app/templates/core_user_registration_app/admin/templates/versions/available.html
+++ b/core_user_registration_app/templates/core_user_registration_app/admin/templates/versions/available.html
@@ -7,7 +7,7 @@
 
 {% if not data.version_manager.user %}
     <!-- If no user is linked to the version manager, it means that we come from the global template list -->
-    {% url 'admin:core_user_registration_app_templates' as template_list_url %}
+    {% url 'core-admin:core_user_registration_app_templates' as template_list_url %}
     <a href="{% url 'admin:core_main_app_upload_template_version' data.version_manager.id %}"
        class="float-right btn btn-secondary">
         <i class="fas fa-upload"></i> Upload New Version
