fix: empty line not as long as headers
Change-Id: Ieec7c92cbe6f6fe80f789aaa8952833e4ab87c0b

--- a/core_user_registration_app/templates/core_user_registration_app/admin/account_requests/pending.html
+++ b/core_user_registration_app/templates/core_user_registration_app/admin/account_requests/pending.html
@@ -37,17 +37,17 @@
                     <i class="fa fa-times"></i> Deny
                 </div>
             </td>
-            {% if request.metadata  %}
-
-            <td><div class="btn btn-view-metadata">
-
-                <i class ="fa fa-file-text-o"></i> View metadata
-            </div>
-            {% endif %}
+            <td>
+                {% if request.metadata  %}
+                <div class="btn btn-view-metadata">
+                    <i class ="fa fa-file-text-o"></i> View metadata
+                </div>
+                {% endif %}
+            </td>
         </tr>
     {% empty %}
         <tr>
-            <td class="empty" colspan="6">
+            <td class="empty" colspan="7">
                 No account requests pending at the moment.
             </td>
         </tr>
