feat: set timezone
Change-Id: I17b9aaff179ea7fb991a2e0005d7596392fc497a

--- a/core_user_registration_app/templates/core_user_registration_app/admin/account_requests/pending.html
+++ b/core_user_registration_app/templates/core_user_registration_app/admin/account_requests/pending.html
@@ -1,5 +1,6 @@
 {% extends 'core_main_app/_render/admin/theme/tools/box.html' %}
 {% load timestamptags %}
+{% load tz %}
 
 {% block box_title %}Pending requests{% endblock %}
 
@@ -28,7 +29,7 @@
             <td>{{ request.first_name }}</td>
             <td>{{ request.last_name }}</td>
             <td>{{ request.email }}</td>
-            <td>{{ request.date|print_datetime_utc_unaware }}</td>
+            <td>{{ request.date|localtime }}</td>
             <td>
                 <div class="btn btn-success accept_request">
                     <i class="fa fa-check"></i> Accept
