fix: button cosmetics
Change-Id: I2f34e68540597b9f3843873ecb8355709bb97359

--- a/core_user_registration_app/templates/core_user_registration_app/admin/account_requests/pending.html
+++ b/core_user_registration_app/templates/core_user_registration_app/admin/account_requests/pending.html
@@ -40,7 +40,7 @@
             </td>
             <td>
                 {% if request.metadata  %}
-                <div class="btn btn-view-metadata">
+                <div class="btn btn-secondary btn-view-metadata">
                     <i class ="fa fa-file-text-o"></i> View metadata
                 </div>
                 {% endif %}
