--- a/core_user_registration_app/templates/core_user_registration_app/user/account_creation.html
+++ b/core_user_registration_app/templates/core_user_registration_app/user/account_creation.html
@@ -24,7 +24,7 @@
     </div>
     <div class="form-group">
     <div class="col-sm-12">
-        <a class="btn btn-default save-to-repo">
+        <a class="btn btn-large btn-secondary save-to-repo">
             <i class="fas fa-arrow-right"></i> Finish Registration
         </a>
     </div>
